# Cycle-planner

./: .gitignore  README.md  build-desktop.bat  build-desktop.sh  launch-desktop.bat  launch-desktop.sh  prompt.txt  run-desktop.bat  run-desktop.sh
backend/: build.gradle
backend/src/main/java/com/example/todo/: HealthController.java  TodoBackendApplication.java  WebConfig.java
desktop/: app.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: CalendarTab.tsx  CycleSelector.tsx  DesktopWindowChrome.tsx  GoalListTab.tsx  PrettySelect.tsx  TabBar.tsx  TableGridPicker.tsx  TodoTab.tsx  WorkDetailPanel.tsx
frontend/src/types/: file-system-access.d.ts  models.ts
frontend/src/utils/: model.ts  storage.ts
testmemo/2026_53880c/: cycle_data.json
testmemo/new_cycle_4affcc/: cycle_data.json
