[package]
name = "cycle-planner"
version = "0.1.0"
description = "Cycle Planner Desktop"
authors = ["cycle-planner"]
edition = "2021"

[lib]
name = "cycle_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
rfd = "0.15"
rand = "0.8"
raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
